# blog-app-backend

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 24f589113f1d_update_blogs_table.py  72d893996804_create_users_and_otps_tables.py  923c1d930488_create_blogs_table.py
blog_app/: __init__.py  main.py
blog_app/api/: blog.py  user.py
blog_app/core/: config.py  security.py
blog_app/crud/: __init__.py  blog.py  user.py
blog_app/db/: base.py  session.py
blog_app/db/models/: __init__.py  blog.py  user.py
blog_app/decorators/: __init__.py  jwt.py
blog_app/dependencies/: __init__.py  user.py
blog_app/schemas/: __init__.py  blog.py  token.py  user.py
blog_app/utils/: __init__.py  blog.py  email.py
